# quant_for_fun

./: .gitignore  README.md  pyproject.toml
docs/: daily_study_plan.md  finrl_2026_lab.md  finrl_daily_practice_plan.md  learning_path.md
quant_for_fun/: __init__.py  portfolio.py
quant_for_fun/backtest/: vectorized.py
quant_for_fun/data/: synthetic.py
quant_for_fun/examples/: backtest_recent_non_consensus.py  run_finrl_2026.py  train_baseline.py  train_recent_non_consensus_model.py
quant_for_fun/features/: non_consensus.py  technical.py
quant_for_fun/models/: baseline.py  cross_sectional.py
tests/: test_finrl_runner.py  test_non_consensus_factors.py  test_pipeline.py
