[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-for-fun"
version = "0.1.0"
description = "A small learning lab for quantitative finance experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
include = ["quant_for_fun*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
