[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-for-fun"
version = "0.1.0"
description = "A small learning lab for quantitative finance experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
finrl = [
  "akshare>=1.18",
  "alpaca-py>=0.37",
  "alpaca-trade-api>=3.2",
  "gymnasium>=0.29",
  "matplotlib>=3.7",
  "pandas-market-calendars>=4.4",
  "selenium>=4.20,<4.33",
  "sb3-contrib>=2.8,<2.9",
  "stable-baselines3[extra]>=2.3",
  "stockstats>=0.5",
  "webdriver-manager>=4.0",
  "wrds>=3.2",
  "yfinance>=0.2.58,<0.2.59",
]

[tool.setuptools.packages.find]
include = ["quant_for_fun*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
